--- a/src/App.css
+++ b/src/App.css
@@ -40,8 +40,9 @@
 #winMessage {
   position: absolute;
   top: 0;
+  margin:0;
   /* left: 0; */
-  height: 95%;
+  height: 100%;
   width: 100%;
   display: flex;
   justify-content: center;
