--- a/src/components/Board/board.css
+++ b/src/components/Board/board.css
@@ -7,6 +7,7 @@ button {
     align-items:center;
     flex-direction:column;
     height: 90%;
+    width: 90%;
 }
 
 .board {
@@ -26,4 +27,14 @@ button {
     flex-grow: 1;
     width:90%;
     justify-content: center;
+    flex-basis: 30%;
+}
+
+.game-board {
+        height: 100%;
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
 }
